[WFCORE-4000] Spawn new process to detect if JVM is modular or not.